[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.105"
sdl2 = "0.38.0"
cfg-if = "1.0.4"
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
fern = "0.7.1"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.3"
